--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ language_proficiency/.project
 /.metadata/
 
 RemoteSystemsTempFiles/.project
+
+.vscode/launch.json
+
+10_days_of_statistics/.project
+
+.vscode/.ropeproject/
